--- a/app/src/main/res/layout/activity_notepad.xml
+++ b/app/src/main/res/layout/activity_notepad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Notepad">
+    tools:context=".ui.ListadoParcelas">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:contentDescription="@string/add_note"
+        android:contentDescription="@string/add_parcela"
         android:src="@drawable/ic_add_black_24dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
