--- a/app/src/main/res/layout/activity_notepad.xml
+++ b/app/src/main/res/layout/activity_notepad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ListadoParcelas">
+    tools:context=".ui.M12_camping">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
