--- a/app/src/main/res/layout/activity_reservaedit.xml
+++ b/app/src/main/res/layout/activity_reservaedit.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent">
 
 
-
     <LinearLayout android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -32,6 +31,7 @@
     <LinearLayout android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/telefono"
@@ -53,6 +53,7 @@
     <LinearLayout android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/FechaEntrada"
@@ -115,6 +116,7 @@
             android:background="@android:color/transparent" />
     </LinearLayout>
 
+    <!-- Título: Parcelas reservadas -->
     <TextView
         android:id="@+id/label_parcelas_reservadas"
         android:layout_width="match_parent"
@@ -123,12 +125,14 @@
         android:textSize="20sp"
         android:layout_margin="@dimen/big_padding" />
 
+    <!-- RecyclerView para mostrar parcelas reservadas -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewParcelas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/big_padding" />
 
+    <!-- Botón para añadir parcelas -->
     <Button
         android:id="@+id/button_add_parcela"
         android:layout_width="wrap_content"
