--- a/app/src/main/res/layout/activity_listado_reservas.xml
+++ b/app/src/main/res/layout/activity_listado_reservas.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.ListadoParcelas">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview_reservas"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="@dimen/big_padding"
