--- a/app/src/main/res/layout/recyclerview_item_parcela_reservada.xml
+++ b/app/src/main/res/layout/recyclerview_item_parcela_reservada.xml
@@ -10,10 +10,9 @@
     <!-- Nombre de la parcela -->
     <TextView
         android:id="@+id/parcela_nombre"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:text="Parcela Nombre"
+        android:text="Nombre parcela"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:padding="8dp" />
@@ -21,10 +20,10 @@
     <!-- Número de ocupantes -->
     <TextView
         android:id="@+id/numero_ocupantes"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="0"
+        android:text="nOcp"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:gravity="center"
