--- a/app/src/main/res/layout/activity_parcelaedit.xml
+++ b/app/src/main/res/layout/activity_parcelaedit.xml
@@ -45,7 +45,7 @@
             android:layout_margin="@dimen/big_padding"
             android:fontFamily="sans-serif-light"
             android:hint="@string/hint_maxOcupantes"
-            android:inputType="textAutoComplete"
+            android:inputType="number"
             android:minHeight="@dimen/min_height"
             android:textSize="18sp" />
     </LinearLayout>
@@ -66,7 +66,7 @@
             android:layout_margin="@dimen/big_padding"
             android:fontFamily="sans-serif-light"
             android:hint="@string/hint_precioXpersona"
-            android:inputType="textAutoComplete"
+            android:inputType="number"
             android:minHeight="@dimen/min_height"
             android:textSize="18sp" />
     </LinearLayout>
