aplicacion operativa, tests en proceso, de los tests que hay hechos falta arreglar que no se inserten y actualicen parcelas con nombres vacios o repetidos

--- a/app/src/main/res/layout/activity_listado_parcelas.xml
+++ b/app/src/main/res/layout/activity_listado_parcelas.xml
@@ -17,6 +17,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/recyclerview_item" />
 
+    <Button
+        android:id="@+id/button_run_tests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/run_tests"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         app:layout_constraintBottom_toBottomOf="parent"
