--- a/app/src/main/res/layout/activity_listado_parcelas.xml
+++ b/app/src/main/res/layout/activity_listado_parcelas.xml
@@ -11,21 +11,42 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="@dimen/big_padding"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/button_run_tests"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/recyclerview_item" />
+        tools:listitem="@layout/recyclerview_item"
+        android:layout_marginBottom="10dp" />
+
+    <Button
+        android:id="@+id/button_run_test_sobrecarga"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/run_test_sobrecarga"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp" />
+
+    <Button
+        android:id="@+id/button_run_test_volumen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/run_test_volumen"
+        app:layout_constraintBottom_toBottomOf="@id/button_run_test_sobrecarga"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="45dp" />
 
     <Button
         android:id="@+id/button_run_tests"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/run_tests"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/button_run_test_volumen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="16dp" />
+        android:layout_margin="45dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
